# SORA2.5

./: .env  .env.example  .gitignore  README.md  pyproject.toml  requirements.txt  vercel.json
api/: index.py  requirements.txt
app/: __init__.py  config.py  db.py  main.py  seed.py
app/api/: dma.py  sora.py
app/engine/: dma_scoring_engine.py  sora_engine.py
app/models/: __init__.py  dma.py  sora.py
app/schemas/: dma.py  sora.py
app/services/: dma_service.py  sora_service.py
frontend/: index.html  package-lock.json  package.json  tailwind.config.js  tsconfig.tsbuildinfo  vite.config.ts
frontend/src/: App.tsx  index.css
frontend/src/api/: client.ts
frontend/src/components/: Background3D.tsx  DmaEvaluator.tsx  Navbar.tsx  SoraBuilder.tsx
frontend/src/types/: index.ts
static/: app.js  index.html  style.css
tests/: conftest.py  test_api.py
